[gd_scene load_steps=4 format=3 uid="uid://be4vue2gj5mgp"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_b2k3f"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1"]
radius = 40.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(32, 32)

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_b2k3f")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
color = Color(1, 0, 0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1")

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_1")

[connection signal="area_entered" from="AttackArea" to="." method="_on_attack_area_area_entered"]
[connection signal="area_exited" from="AttackArea" to="." method="_on_attack_area_area_exited"]